{
  "version": 4,
  "terraform_version": "1.5.4",
  "serial": 304,
  "lineage": "4b461f94-3e10-53ae-b379-aaffae1217c9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:589903995330:internet-gateway/igw-09b9da52a78c25130",
            "id": "igw-09b9da52a78c25130",
            "owner_id": "589903995330",
            "tags": {
              "Name": "Final-Project-IGW"
            },
            "tags_all": {
              "Name": "Final-Project-IGW"
            },
            "vpc_id": "vpc-0c5e11a10670a07c3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "backend_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:589903995330:loadbalancer/app/Backend-lb/af39af6cc865e573",
            "arn_suffix": "app/Backend-lb/af39af6cc865e573",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-Backend-lb-328132614.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:589903995330:loadbalancer/app/Backend-lb/af39af6cc865e573",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Backend-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0dcbd4df0704d29f2"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-075c322683fe6fa61"
              },
              {
                "subnet_id": "subnet-0fe5e2da8abff3519"
              }
            ],
            "subnets": [
              "subnet-075c322683fe6fa61",
              "subnet-0fe5e2da8abff3519"
            ],
            "vpc_id": "vpc-0c5e11a10670a07c3",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "aws_s3_bucket.example",
            "aws_security_group.private_sg",
            "aws_security_group.public_sg",
            "aws_subnet.private_subnet2_az1",
            "aws_subnet.private_subnet2_az2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "frontend_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:589903995330:loadbalancer/app/Frontend-lb/f80ba6fb3d039911",
            "arn_suffix": "app/Frontend-lb/f80ba6fb3d039911",
            "desync_mitigation_mode": "defensive",
            "dns_name": "Frontend-lb-1596806787.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:589903995330:loadbalancer/app/Frontend-lb/f80ba6fb3d039911",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Frontend-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0dcbd4df0704d29f2"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06f6584e04ebf7092"
              },
              {
                "subnet_id": "subnet-0d65b2ace8bb423ff"
              }
            ],
            "subnets": [
              "subnet-06f6584e04ebf7092",
              "subnet-0d65b2ace8bb423ff"
            ],
            "vpc_id": "vpc-0c5e11a10670a07c3",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "aws_s3_bucket.example",
            "aws_security_group.private_sg",
            "aws_security_group.public_sg",
            "aws_subnet.private_subnet1_az1",
            "aws_subnet.private_subnet1_az2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:589903995330:security-group/sg-0dcbd4df0704d29f2",
            "description": "Allow inbound traffic from bastion host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dcbd4df0704d29f2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Inbound traffic from bastion host",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f13710ec4b645212"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Private-SG",
            "name_prefix": "",
            "owner_id": "589903995330",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c5e11a10670a07c3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.public_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:589903995330:security-group/sg-0f13710ec4b645212",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f13710ec4b645212",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Inbound traffic from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Public-SG",
            "name_prefix": "",
            "owner_id": "589903995330",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c5e11a10670a07c3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet1_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:589903995330:subnet/subnet-06f6584e04ebf7092",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06f6584e04ebf7092",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "589903995330",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-Subnet1-AZ1"
            },
            "tags_all": {
              "Name": "Private-Subnet1-AZ1"
            },
            "vpc_id": "vpc-0c5e11a10670a07c3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet1_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:589903995330:subnet/subnet-0d65b2ace8bb423ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.32.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d65b2ace8bb423ff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "589903995330",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-Subnet1-AZ2"
            },
            "tags_all": {
              "Name": "Private-Subnet1-AZ2"
            },
            "vpc_id": "vpc-0c5e11a10670a07c3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet2_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:589903995330:subnet/subnet-0fe5e2da8abff3519",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fe5e2da8abff3519",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "589903995330",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-Subnet2-AZ1"
            },
            "tags_all": {
              "Name": "Private-Subnet2-AZ1"
            },
            "vpc_id": "vpc-0c5e11a10670a07c3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet2_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:589903995330:subnet/subnet-075c322683fe6fa61",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.48.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-075c322683fe6fa61",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "589903995330",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-Subnet2-AZ2"
            },
            "tags_all": {
              "Name": "Private-Subnet2-AZ2"
            },
            "vpc_id": "vpc-0c5e11a10670a07c3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:589903995330:vpc/vpc-0c5e11a10670a07c3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04b650b3f211cfa20",
            "default_route_table_id": "rtb-0f8b910befe143851",
            "default_security_group_id": "sg-0cedf62ea7c2cdfd2",
            "dhcp_options_id": "dopt-038ba76c45280bcad",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c5e11a10670a07c3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f8b910befe143851",
            "owner_id": "589903995330",
            "tags": {
              "Name": "Final-Project-VPC"
            },
            "tags_all": {
              "Name": "Final-Project-VPC"
            }
          }
        }
      ]
    }
  ]
}